--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     <div class="end-screen" id="endScreen">
         <div class="end-screen-content">
             <h1>💖 VICTORY! 💖</h1>
-            <p id="endMessage">You've conquered the Midnight Castle...</p>
+            <p id="endMessage">Kuja Tudinyane!..</p>
             <p id="finalScore">Score: 0 💀</p>
             <p id="endAffirmation">I love you so much, sunshine! 😛💕</p>
             <button onclick="location.reload()">PLAY AGAIN</button>
@@ -1371,24 +1371,24 @@
                 const affirmations = {
                     ora: [
                         "ORA ORA ORA! 💪🐧",
-                        "Your strength is amazing! 🔥",
-                        "So powerful! 😈💖",
-                        "I'm yours, sweetheart! 💋",
-                        "Unstoppable! ⚡"
+                        "And if you go I wanna go with you, and if you die I wanna die with youuuu 🔥",
+                        "Come bite me! 😈💖",
+                        "I'm yours, sweetheart! and your mine nikukute na mwingine 💋",
+                        "Your my speciall! ⚡"
                     ],
                     muda: [
                         "MUDAMUDA! You're the best! 😛💕",
-                        "I love watching you! 👀💖",
-                        "Relentless passion! 🔥😋",
-                        "Take me, my love! 💋💋",
+                        "I know where you sleep! 👀💖",
+                        "SUNSHINE I LOVE YOUUU! 🔥😋",
+                        "My handsome lovely boyfriend! 💋💋",
                         "MUDA! So hot! 😈🔥"
                     ],
                     stand: [
                         "Your Stand is glorious! 💜✨",
-                        "I feel your power! 😈💖",
-                        "Mystical beauty! 🌙💋",
-                        "Your spirit enchants me! 🖤💜",
-                        "So seductive! 😛💕"
+                        "I miss you! 😈💖",
+                        "Dinywa na shetani! 🌙💋",
+                        "There is no maybe I am the one! 🖤💜",
+                        "MSUPAAA! 😛💕"
                     ]
                 };
 
