--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@
                         "ORA ORA ORA! 💪🐧",
                         "And if you go I wanna go with you, and if you die I wanna die with youuuu 🔥",
                         "Come bite me! 😈💖",
-                        "I'm yours, sweetheart! and your mine nikukute na mwingine 💋",
+                        "I'm yours, sweetheart! and your mine nikukute na mwingine  eee💋",
                         "Your my speciall! ⚡"
                     ],
                     muda: [
